--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -153,3 +153,23 @@ button {
     margin-bottom: 30px;
   }
 }
+
+.notification {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  z-index: 100;
+  transform: translateX(120%);
+  transition: all 0.5s ease-in-out;
+  background-color: #e5c076;
+  color: #fff;
+
+  &.is-active {
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    transform: translateX(0%);
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+  }
+}
