--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -173,3 +173,36 @@ button {
     transition: all 0.5s ease-in-out;
   }
 }
+
+.add-more-button {
+  background: #e5c076;
+  color: #fff;
+  border: 1px solid #e5c076;
+  transition: 0.3s all;
+
+  &:hover {
+    background: #fff;
+    color: #273038;
+  }
+}
+
+.main-menu {
+  display: flex;
+  height: 100%;
+  align-items: center;
+
+  li {
+    margin: 0 10px;
+
+    a {
+      color: #273038;
+      transition: 0.3s all;
+      font-size: 18px;
+
+      &:hover,
+      &.active {
+        color: #f7b452;
+      }
+    }
+  }
+}
