Fix counting winners

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -324,3 +324,20 @@ button {
     }
   }
 }
+
+/* Define different color classes for different statuses */
+.status-icon.finished {
+  background-color: white;
+}
+
+.status-icon.canceled {
+  background-color: orange;
+}
+
+.status-icon.draft {
+  background-color: yellow;
+}
+
+.status-icon.active {
+  background-color: green;
+}
